# boolean-weight-mnist

./: .gitignore  README.md  main.py  model.params  pyproject.toml  visualize.py
